tests/samples/positive/std/std_cstring.ax
module std_cstring;

import std.core.result as result;
import std.core.str as strings;
import std.core.text as text;
import std.core.vec as vec;
import std.ffi.c.string as cstring;

fn check_cstr_borrowed_utf8() -> result::Result<bool, i32> {
    let borrowed: cstring::CStr = cstring::CStr.from_c(c"hello")?;
    let view: str = borrowed.as_str_utf8().unwrap_or("bad");
    return Result.ok(borrowed.byte_len() == cast(usize, 5) &&
        strings::equals(view, "hello") &&
        text::c_string_equal(borrowed.as_c(), c"hello"));
}

fn check_cstring_from_str() -> result::Result<bool, i32> {
    var owned: cstring::CString = cstring::CString.from_str("ffi-\u{03A9}")?;
    let borrowed: cstring::CStr = owned.as_cstr();
    let borrowed_text: str = borrowed.as_str_utf8().unwrap_or("bad");
    let owned_text: str = owned.as_str();
    let ok: bool = owned.byte_len() == cast(usize, 6) &&
        borrowed.byte_len() == cast(usize, 6) &&
        strings::equals(owned_text, "ffi-\u{03A9}") &&
        strings::equals(borrowed_text, "ffi-\u{03A9}") &&
        text::c_string_equal(owned.as_c(), c"ffi-\u{03A9}");
    owned.destroy();
    return Result.ok(ok);
}

fn check_rejections() -> bool {
    var interior_nul_result: result::Result<cstring::CString, i32> = cstring::CString.from_str("a\0b");
    let interior_nul_rejected: bool = interior_nul_result.is_err_ref();

    var invalid: vec::VecU8 = vec::new<u8>();
    if !invalid.push(cast(u8, 0xC3)) || !invalid.push(b'(') {
        invalid.destroy();
        return false;
    }
    var invalid_utf8_result: result::Result<cstring::CString, i32> = cstring::CString.from_utf8(invalid.as_span());
    let invalid_utf8_rejected: bool = invalid_utf8_result.is_err_ref();
    invalid.destroy();
    return interior_nul_rejected && invalid_utf8_rejected;
}

fn run() -> result::Result<i32, i32> {
    let cstr_ok: bool = check_cstr_borrowed_utf8()?;
    if !cstr_ok {
        return Result.err(1);
    }
    let cstring_ok: bool = check_cstring_from_str()?;
    if !cstring_ok {
        return Result.err(2);
    }
    if !check_rejections() {
        return Result.err(3);
    }
    return Result.ok(0);
}

fn main() -> i32 {
    return match run() {
        .ok(code) => code,
        .err(code) => code,
    };
}
